[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fase1.gd" type="Script" id=1]
[ext_resource path="res://HomeButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://PageControls.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/fase1/paginas/pag1.png" type="Texture" id=4]
[ext_resource path="res://images/fase1/paginas/pag2.png" type="Texture" id=5]
[ext_resource path="res://images/sprites/carlton_sprites2.png" type="Texture" id=6]
[ext_resource path="res://images/fase1/paginas/pag3.png" type="Texture" id=7]
[ext_resource path="res://images/fase1/outras/indie.jpeg" type="Texture" id=8]
[ext_resource path="res://images/fase1/paginas/pag4.png" type="Texture" id=9]
[ext_resource path="res://images/fase1/paginas/pag5.png" type="Texture" id=10]
[ext_resource path="res://images/fase1/paginas/pag6.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "dancing"
length = 2.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Home" parent="." instance=ExtResource( 2 )]
position = Vector2( 1094.43, 624.097 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="MainContainer" type="Control" parent="."]
margin_left = 40.0
margin_top = 30.0
margin_right = 40.0
margin_bottom = 34.0

[node name="ControlesContainer" type="Control" parent="MainContainer"]
margin_top = 4.0
margin_bottom = 4.0

[node name="Controles" parent="MainContainer/ControlesContainer" instance=ExtResource( 3 )]
position = Vector2( 31.6069, 599.595 )

[node name="Paginas" type="Control" parent="MainContainer"]

[node name="Pag1" type="TextureRect" parent="MainContainer/Paginas" groups=[
"pages",
]]
visible = false
margin_left = -2.07471
margin_top = -9.38824
margin_right = 1197.93
margin_bottom = 590.612
texture = ExtResource( 4 )

[node name="Pag2" type="Control" parent="MainContainer/Paginas" groups=[
"pages",
]]
editor/display_folded = true
visible = false
margin_left = -2.075
margin_top = -9.388
margin_right = 1197.93
margin_bottom = 590.612

[node name="Text" type="TextureRect" parent="MainContainer/Paginas/Pag2"]
margin_right = 1200.0
margin_bottom = 600.0
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="MainContainer/Paginas/Pag2"]
position = Vector2( 887.127, 407.416 )
scale = Vector2( 2.07775, 1.91679 )
texture = ExtResource( 6 )
vframes = 2
hframes = 4

[node name="Dancer" type="AnimationPlayer" parent="MainContainer/Paginas/Pag2"]
anims/dancing = SubResource( 1 )

[node name="Pag3" type="Control" parent="MainContainer/Paginas" groups=[
"pages",
]]
editor/display_folded = true
visible = false
margin_left = -2.075
margin_top = -9.388
margin_right = -2.075
margin_bottom = -9.388

[node name="Text2" type="TextureRect" parent="MainContainer/Paginas/Pag3"]
margin_right = 1200.0
margin_bottom = 600.0
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="MainContainer/Paginas/Pag3"]
margin_left = 64.4388
margin_top = 107.398
margin_right = 221.439
margin_bottom = 127.398
rect_scale = Vector2( 2.68698, 2.68698 )
text = "A Evolução dos Games"

[node name="Button2" type="Button" parent="MainContainer/Paginas/Pag3"]
margin_left = 64.4388
margin_top = 186.156
margin_right = 221.439
margin_bottom = 206.156
rect_scale = Vector2( 2.68698, 2.68698 )
text = "Indie Game"

[node name="IndieGameMovie" type="TextureRect" parent="MainContainer/Paginas/Pag3"]
visible = false
margin_left = 518.374
margin_top = 103.102
margin_right = 2118.37
margin_bottom = 1103.1
rect_scale = Vector2( 0.431538, 0.431538 )
texture = ExtResource( 8 )

[node name="Itchio" type="Button" parent="MainContainer/Paginas/Pag3"]
margin_left = 246.299
margin_top = 267.779
margin_right = 350.299
margin_bottom = 287.779
rect_scale = Vector2( 2.31544, 2.31544 )
text = "https://itch.io/"

[node name="PaperPlease" type="Button" parent="MainContainer/Paginas/Pag3"]
margin_left = 246.299
margin_top = 345.105
margin_right = 351.299
margin_bottom = 365.105
rect_scale = Vector2( 2.31544, 2.31544 )
text = "Papers, Please"

[node name="Pag4" type="Control" parent="MainContainer/Paginas" groups=[
"pages",
]]
editor/display_folded = true
visible = false
margin_left = -2.075
margin_top = -9.388
margin_right = 37.925
margin_bottom = 30.612

[node name="TextureRect" type="TextureRect" parent="MainContainer/Paginas/Pag4"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )

[node name="Showcase1" type="Button" parent="MainContainer/Paginas/Pag4"]
margin_left = 58.7109
margin_top = 266.347
margin_right = 158.711
margin_bottom = 286.347
rect_scale = Vector2( 2.68698, 2.68698 )
text = "SHOW CASE 1"

[node name="Showcase2" type="Button" parent="MainContainer/Paginas/Pag4"]
margin_left = 342.241
margin_top = 270.643
margin_right = 362.241
margin_bottom = 290.643
rect_scale = Vector2( 2.31544, 2.31544 )
text = "2"

[node name="Showcase3" type="Button" parent="MainContainer/Paginas/Pag4"]
margin_left = 398.088
margin_top = 270.643
margin_right = 418.088
margin_bottom = 290.643
rect_scale = Vector2( 2.31544, 2.31544 )
text = "3"

[node name="Showcase4" type="Button" parent="MainContainer/Paginas/Pag4"]
margin_left = 456.799
margin_top = 270.643
margin_right = 476.799
margin_bottom = 290.643
rect_scale = Vector2( 2.31544, 2.31544 )
text = "4"

[node name="Download" type="Button" parent="MainContainer/Paginas/Pag4"]
margin_left = 58.7109
margin_top = 340.81
margin_right = 223.711
margin_bottom = 360.81
rect_scale = Vector2( 2.68698, 2.68698 )
text = "DOWLOAD"

[node name="Docs" type="Button" parent="MainContainer/Paginas/Pag4"]
margin_left = 58.7109
margin_top = 418.136
margin_right = 223.711
margin_bottom = 438.136
rect_scale = Vector2( 2.68698, 2.68698 )
text = "Documentação"

[node name="Exemplos" type="Button" parent="MainContainer/Paginas/Pag4"]
margin_left = 58.7109
margin_top = 498.326
margin_right = 223.711
margin_bottom = 518.326
rect_scale = Vector2( 2.68698, 2.68698 )
text = "Exemplos"

[node name="Pag5" type="Control" parent="MainContainer/Paginas" groups=[
"pages",
]]
editor/display_folded = true
visible = false
margin_left = -2.075
margin_top = -9.388
margin_right = 37.925
margin_bottom = 30.612

[node name="TextureRect2" type="TextureRect" parent="MainContainer/Paginas/Pag5"]
margin_right = 1200.0
margin_bottom = 600.0
texture = ExtResource( 10 )

[node name="Exemplos2" type="Button" parent="MainContainer/Paginas/Pag5"]
margin_left = 58.0678
margin_top = 201.111
margin_right = 223.068
margin_bottom = 221.111
rect_scale = Vector2( 2.68698, 2.68698 )
text = "Referência"

[node name="Exemplos3" type="Button" parent="MainContainer/Paginas/Pag5"]
margin_left = 520.595
margin_top = 201.111
margin_right = 685.595
margin_bottom = 221.111
rect_scale = Vector2( 2.68698, 2.68698 )
text = "Funções prontas"

[node name="Pag6" type="Control" parent="MainContainer/Paginas" groups=[
"pages",
]]
margin_left = -2.075
margin_top = -9.388
margin_right = 37.925
margin_bottom = 30.612

[node name="TextureRect2" type="TextureRect" parent="MainContainer/Paginas/Pag6"]
margin_right = 1200.0
margin_bottom = 600.0
texture = ExtResource( 11 )

[node name="DownloadSprite" type="Button" parent="MainContainer/Paginas/Pag6"]
margin_left = 65.2277
margin_top = 470.322
margin_right = 230.228
margin_bottom = 490.322
rect_scale = Vector2( 2.68698, 2.68698 )
text = "Download"

[node name="FreeAssets" type="Button" parent="MainContainer/Paginas/Pag6"]
margin_left = 658.065
margin_top = 109.465
margin_right = 823.065
margin_bottom = 129.465
rect_scale = Vector2( 2.68698, 2.68698 )
text = "Recursos"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="next_clicked" from="MainContainer/ControlesContainer/Controles" to="." method="_on_Node2D_next_clicked"]
[connection signal="previous_clicked" from="MainContainer/ControlesContainer/Controles" to="." method="_on_Node2D_previous_clicked"]
[connection signal="button_up" from="MainContainer/Paginas/Pag3/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag3/Button2" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag3/Itchio" to="." method="_on_Itchio_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag3/PaperPlease" to="." method="_on_PaperPlease_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag4/Showcase1" to="." method="_on_Showcase1_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag4/Showcase2" to="." method="_on_Showcase2_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag4/Showcase3" to="." method="_on_Showcase3_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag4/Showcase4" to="." method="_on_Showcase4_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag4/Download" to="." method="_on_Download_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag4/Docs" to="." method="_on_Docs_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag4/Exemplos" to="." method="_on_Exemplos_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag5/Exemplos2" to="." method="_on_Exemplos2_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag5/Exemplos3" to="." method="_on_Exemplos3_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag6/DownloadSprite" to="." method="_on_DownloadSprite_button_up"]
[connection signal="button_up" from="MainContainer/Paginas/Pag6/FreeAssets" to="." method="_on_FreeAssets_button_up"]
